fix horizontal scroll on olivia's page

--- a/src/pages/olivia-shortt.module.scss
+++ b/src/pages/olivia-shortt.module.scss
@@ -5,6 +5,8 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    grid-column: 1 / -1;
   }
 
   .all-modals div:nth-of-type(1) {
@@ -23,7 +25,7 @@
   }
 
   .all-modals div:nth-of-type(4) {
-    left: 87%;
+    left: 77%;
     top: 24%;
   }
 
@@ -43,7 +45,7 @@
   }
 
   .all-modals div:nth-of-type(8) {
-    left: 88%;
+    left: 61%;
     top: 75%;
   }
 }
